mule-user-guide/v/3.6/wildcard-filter.adoc
= Wildcard Filter
:keywords: anypoint studio, esb, filters, conditional, gates, wildcard

*Purpose:* Matches string messages against a wildcard pattern.

*Minimum Configuration:* The pattern string for the match.

*Discussion:* The Wildcard Filter applies a wildcard pattern to the message payload. The filter applies the `toString()` method to the payload to convert the payload to a String. To ensure that the payload is a String, you might want to apply a Payload Filter to the message with a nested And Logic Filter.

By default, pattern matching is case sensitive, and the Case Sensitive box is checked. Uncheck this box if you do not want pattern matching to be case sensitive.


[TIP]
You might also want to apply a link:https://docs.mulesoft.com/mule-user-guide/v/3.7/filters-configuration-reference#payload-type-filter[Payload Type Filter] to the message using an link:https://docs.mulesoft.com/mule-user-guide/v/3.7/logic-filter[AND Logic Filter] to make sure the payload is a String.

For the string "the quick brown fox jumped over the lazy dog", the following patterns would match:

* `*x jumped over the lazy dog`
* `the quick*`
* `*fox*`

[source, xml, linenums]
----
<wildcard-filter pattern="the quick brown *"/>
----

== See Also

* link:https://docs.mulesoft.com/mule-user-guide/v/3.6/filters-configuration-reference[Filter Configuration Reference]
